manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: "notebook-${WORKFLOW_ID}"
  name: "notebook-${WORKFLOW_ID}"
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: "notebook-${WORKFLOW_ID}"
  strategy: 
    type: Recreate
  template: 
    metadata: 
      labels: 
        app: "notebook-${WORKFLOW_ID}"
    spec:
      imagePullSecrets:
      - name: dockerhub
      containers:
      - name: "notebook-${WORKFLOW_ID}"
        image: ${DOCKERHUB_USERNAME}/notebook:${WORKFLOW_ID}
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
