manifests/service.yml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: notebook-${WORKFLOW_ID}
  name: notebook-${WORKFLOW_ID}
spec: 
  ports: 
    - 
      name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector: 
    app: notebook-${WORKFLOW_ID}
  type: ClusterIP
